# convocatorias

./: .gitignore  pyproject.toml  setup.sh  sources.yaml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: crawl.yml
config/: __init__.py
openspec/: config.yaml
openspec/changes/archive/2026-06-16-rastreador-convocatorias/: design.md  proposal.md  spec.md  tasks.md
scripts/: run.sh
src/rastreador_convocatorias/: __init__.py  __main__.py  main.py  models.py  registry.py
src/rastreador_convocatorias/pipeline/: __init__.py  classifier.py  deduplicator.py  validator.py
src/rastreador_convocatorias/reporters/: __init__.py  html_generator.py  json_exporter.py
src/rastreador_convocatorias/reporters/templates/: __init__.py  report.html.j2
src/rastreador_convocatorias/spiders/: __init__.py  adapters.py  base.py  pagination.py
tests/: __init__.py  conftest.py  test_classifier.py  test_deduplicator.py  test_smoke.py  test_validator.py
