[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rastreador-convocatorias"
version = "0.1.0"
description = "Automated web scraper for open calls (convocatorias) across 50+ sources"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "rastreador-convocatorias contributors" },
]

keywords = ["scraping", "convocatorias", "grants", "funding", "colombia"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "scrapling[fetchers]>=0.4",
    "pandas>=2.2",
    "pydantic>=2.0",
    "python-dateutil>=2.9",
    "rapidfuzz>=3.9",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
rastreador-convocatorias = "rastreador_convocatorias.main:main"

[project.urls]
Homepage = "https://github.com/julian/convocatorias"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"
